# discord-ext-lava

./: .deepsource.toml  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: pyright.yaml  verify_types.yaml
discord/ext/lava/: __init__.py  _backoff.py  _types.py  _utilities.py  backoff.py  enums.py  exceptions.py  link.py  node.py  player.py  pool.py  queue.py  types.py  utilities.py  utils.py
discord/ext/lava/objects/: __init__.py  collection.py  enums.py  events.py  filters.py  playlist.py  result.py  search.py  stats.py  track.py
discord/ext/lava/objects/filters/: channel_mix.py  distortion.py  equalizer.py  filter.py  karaoke.py  low_pass.py  rotation.py  timescale.py  tremolo.py  vibrato.py  volume.py
discord/ext/lava/objects/types/: events.py  playlist.py
discord/ext/lava/types/: common.py  payloads.py  rest.py  websocket.py
discord/ext/lava/types/objects/: events.py  filters.py  playlist.py  stats.py  track.py
discord/ext/lava/types/rest/: requests.py  responses.py
docs/: api_reference.rst  conf.py  events.rst  exceptions.rst  filters.rst  index.rst  objects.rst  reference.rst  requirements.txt
docs/extensions/: resource_links.py  resourcelinks.py
docs/objects/: filters.rst  playlist.rst  routeplanner.rst  stats.rst  track.rst
docs/pages/: api.rst  api_reference.rst  contribution.rst  enums.rst  events.rst  examples.rst  exceptions.rst  filters.rst  installation.rst  installing.rst  objects.rst  reference.rst  usage.rst
docs/reference/: index.rst  obsidian.rst  slate.rst
docs/reference/obsidian/: index.rst
docs/static/: custom.css
examples/: basic.py
lavalink/: application.yml
slate/: __init__.py  client.py  exceptions.py  node.py  player.py  pool.py  queue.py  types.py  utils.py
slate/andesite/: node.py  player.py
slate/bases/: node.py  player.py
slate/lavalink/: node.py  player.py
slate/objects/: __init__.py  collection.py  enums.py  events.py  filters.py  playlist.py  result.py  routeplanner.py  search.py  stats.py  track.py
slate/objects/filters/: __init__.py  channel_mix.py  distortion.py  equalizer.py  filter.py  karaoke.py  low_pass.py  rotation.py  timescale.py  tremolo.py  vibrato.py  volume.py
slate/obsidian/: __init__.py  exceptions.py  node.py  player.py
slate/obsidian/objects/: __init__.py  collection.py  enums.py  events.py  exceptions.py  filters.py  playlist.py  result.py  search.py  stats.py  track.py
slate/types/: __init__.py
slate/typings/: __init__.py
slate/utils/: backoff.py  queue.py
tests/: bot.py  pyproject.toml
