[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name          = "discord-ext-lava"
version       = "0.6.0"
description   = "A discord.py extension for lavaplayer-based audio nodes."
license       = "MIT"
authors       = ["Axel <axelancerr@gmail.com>"]
readme        = "README.md"
homepage      = "https://github.com/Axelware/discord-ext-lava"
repository    = "https://github.com/Axelware/discord-ext-lava"
documentation = "https://discord-ext-lava.readthedocs.io/en/latest/"
keywords      = ["lavalink", "api", "wrapper", "async", "discord", "discord-ext"]
include       = ["CHANGELOG.md", "LICENSE"]
classifiers = [
    "Framework :: AsyncIO",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed"
]
packages = [
    { include = "discord/ext/lava" },
    { include = "discord/ext/lava/**/*.py" },
    { include = "discord/ext/lava/**/*.typed" },
]


[tool.poetry.dependencies]
python            = "^3.10"
aiohttp           = "^3.8.0"
discord-py        = "^2.1.0"
spoti-py          = "^0.1.0"
typing-extensions = "^4.4.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx             = "5.3.0"
sphinxcontrib-trio = "1.1.2"
sphinx-copybutton  = "0.5.0"
sphinx-inline-tabs = "2022.1.2b11"
furo               = "2022.9.29"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jishaku = "*"


[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Axelware/discord-ext-lava/issues"
"Discord"       = "https://discord.com/invite/w9f6NkQbde"


[tool.pyright]
include                = ["discord/ext/lava", "tests"]
pythonVersion          = "3.10"
typeCheckingMode       = "strict"
useLibraryCodeForTypes = true

reportUnknownMemberType = false
reportImportCycles      = false
