[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name          = "discord-ext-lava"
version       = "1.0.0a1"
description   = "A discord.py extension for lavaplayer-based audio nodes."
license       = "MIT"
authors       = ["Axel <axelancerr@gmail.com>"]
readme        = "README.md"
homepage      = "https://github.com/Axelancerr/discord-ext-lava"
repository    = "https://github.com/Axelancerr/discord-ext-lava"
documentation = "https://discord-ext-lava.readthedocs.io/en/latest/"
keywords      = ["lavalink", "api", "wrapper", "async", "discord.py", "discord", "discord.ext"]
include       = ["CHANGELOG.md", "LICENSE"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "discord/ext/lava" },
    { include = "discord/ext/lava/**/*.py" },
    { include = "discord/ext/lava/**/*.typed" },
]

[tool.poetry.dependencies]
python            = "^3.11.0"
aiohttp           = "^3.8.0"
discord-py        = "^2.2.0"
spoti-py          = "^0.1.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx             = "^6.1.0"
sphinxcontrib-trio = "^1.1.0"
sphinx-copybutton  = "^0.5.0"
sphinx-inline-tabs = "^2022.1.0"
furo               = "^2022.12.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.0"
jishaku  = "^2.5.0"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Axelancerr/discord-ext-lava/issues"
"Discord"       = "https://discord.com/invite/w9f6NkQbde"

[tool.pyright]
include                = ["discord/ext/lava", "tests"]
pythonVersion          = "3.11"
typeCheckingMode       = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage      = false
reportUnknownMemberType = false
reportImportCycles      = false
