[tool.poetry]
name        = "test"
version     = "0.1.0"
description = ""
authors     = ["Aaron Hennessey <aaronhnsy@gmail.com>"]

[tool.poetry.dependencies]
python            = "^3.12.0"
aiohttp           = "^3.9.0"
discord-py        = "^2.3.0"
discord-ext-lava  = { path = "../" }

[tool.pyright]
include                = ["bot.py"]
pythonVersion          = "3.12"
typeCheckingMode       = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage      = false
reportUnknownMemberType = false
reportImportCycles      = false
